# wallet

./: .env.example  .gitignore  COMPETITIVE_ANALYSIS.md  Cargo.toml  README.md  TODO.md
src/: main.rs
src/commands/: account.rs  balance.rs  mod.rs  transaction.rs
src/utils/: mod.rs  provider.rs
src/wallet/: wallet.rs
