[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web3 和以太坊相关
ethers = "2.0"
# 命令行解析
clap = { version = "4.5", features = ["derive"] }
# 异步运行时
tokio = { version = "1.36", features = ["full"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 十六进制编码
hex = "0.4"
# 环境变量
dotenv = "0.15"
